# fastmcp-chroma-ollama

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  example_client.py  example_client_compat.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: python-test.yml
src/fastmcp_memory/: __init__.py  client.py  memory.py
tests/: __init__.py  test_memory.py
